syntax = "proto3";

import "google/protobuf/empty.proto";

package hubdj;

service Hubdj {
  rpc Auth(AuthRequest) returns (AuthResponse) {}
  rpc GetUser(UserId) returns (User) {}
  rpc StreamBoothState(google.protobuf.Empty) returns (stream Booth) {}
  rpc SubmitPlaylist(SubmitPlaylistRequest) returns (Status) {}
}

message Booth {
  message Playing {
    uint64 dj = 1;
    Track track = 2;
    repeated Track queue = 3;
  }
  optional Playing playing = 1;
}

message UserId { uint64 id = 1; }

message User {
  message Queue { repeated Track tracks = 1; }
  uint64 id = 1;
  string name = 2;
  optional Queue queue = 3;
}

message AuthRequest { string name = 1; }

message AuthResponse {
  uint64 token = 1;
  uint64 id = 2;
  repeated uint64 users = 3;
}

message Status { bool ok = 1; }

message SubmitPlaylistRequest {
  uint64 token = 1;
  Playlist playlist = 2;
}
message Playlist { repeated Track tracks = 1; }

message Track { string url = 1; }
